// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 staging percentage 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "stagingPercentage": 1,
  "version": "1.1.0",
}
`;

exports[`1 staging percentage 2`] = `
Array [
  "checking-for-update",
]
`;

exports[`90 staging percentage 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "stagingPercentage": 90,
  "version": "1.1.0",
}
`;

exports[`90 staging percentage 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`DigitalOcean Spaces 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`DigitalOcean Spaces 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`cancel download with progress 1`] = `"Cancelled"`;

exports[`check updates - no versions at all 1`] = `"No latest version, please ensure that user, package and repository correctly configured. Or at least one version is published. HttpError: 404 Not Found"`;

exports[`checkForUpdates several times 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`checkForUpdates several times 2`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`checkForUpdates several times 3`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`downgrade (allowed) 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.1.exe",
    },
  ],
  "version": "1.1.1",
}
`;

exports[`downgrade (disallowed, beta) 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.5.2-beta.3.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": "",
  "version": "1.5.2-beta.3",
}
`;

exports[`downgrade (disallowed, bintray) 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.1.exe",
    },
  ],
  "version": "1.1.1",
}
`;

exports[`file url (bintray) 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.1.exe",
    },
  ],
  "version": "1.1.1",
}
`;

exports[`file url generic - manual download 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`file url generic - manual download 2`] = `
Array [
  "checking-for-update",
  "update-available",
]
`;

exports[`file url generic 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`file url generic 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`file url github 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "xrTrW8dzWYlPnu71Y4lpLIAuIurBZJvZmqEZyz1rzM3CbbE1Z+T+P5qYYZgwmhmXdYPOpvnmYKa0HGdgXggwtQ==",
      "url": "TestApp-Setup-1.1.0.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": "",
  "version": "1.1.0",
}
`;

exports[`file url github 2`] = `
Object {
  "files": Array [
    Object {
      "sha512": "xrTrW8dzWYlPnu71Y4lpLIAuIurBZJvZmqEZyz1rzM3CbbE1Z+T+P5qYYZgwmhmXdYPOpvnmYKa0HGdgXggwtQ==",
      "url": "TestApp-Setup-1.1.0.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": "",
  "version": "1.1.0",
}
`;

exports[`file url github 3`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`file url github pre-release and fullChangelog 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.5.2-beta.3.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": Array [
    Object {
      "note": "",
      "version": "1.5.2-beta.3",
    },
    Object {
      "note": "<p>Test pre-release. qefr</p>",
      "version": "1.5.0",
    },
  ],
  "version": "1.5.2-beta.3",
}
`;

exports[`file url github pre-release and fullChangelog 2`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.5.2-beta.3.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": Array [
    Object {
      "note": "",
      "version": "1.5.2-beta.3",
    },
    Object {
      "note": "<p>Test pre-release. qefr</p>",
      "version": "1.5.0",
    },
  ],
  "version": "1.5.2-beta.3",
}
`;

exports[`file url github pre-release and fullChangelog 3`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`file url github pre-release and fullChangelog 4`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.5.2-beta.3.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": Array [
    Object {
      "note": "",
      "version": "1.5.2-beta.3",
    },
    Object {
      "note": "<p>Test pre-release. qefr</p>",
      "version": "1.5.0",
    },
  ],
  "version": "1.5.2-beta.3",
}
`;

exports[`sha512 mismatch error event 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`sha512 mismatch error event 2`] = `"sha512 checksum mismatch, expected Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIZ==, got Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw=="`;

exports[`sha512 mismatch error event 3`] = `
Array [
  "checking-for-update",
  "update-available",
  "error",
]
`;

exports[`test error 1`] = `"Path must be a string. Received undefined"`;

exports[`test error 2`] = `
Array [
  "checking-for-update",
  "error",
]
`;
